--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             display: none;
         }
         .btn {
-            background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
             margin: 10px 5px;
-            transition: background-color 0.3s;
+            transition: all 0.3s;
         }
         .btn:hover {
-            background-color: #45a049;
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
         .btn-pay {
             background-color: #2196F3;
@@ -50,17 +50,23 @@
         .btn-pay:hover {
             background-color: #0b7dda;
         }
-        .btn-claim {
-            background-color: #ff9800;
+        .btn-action {
+            background-color: #f44336;
         }
-        .btn-claim:hover {
-            background-color: #e68a00;
+        .btn-action:hover {
+            background-color: #d32f2f;
         }
         .qq-group {
             font-size: 20px;
             font-weight: bold;
             margin: 20px 0;
             display: none;
+        }
+        .action-buttons {
+            margin: 30px 0;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
         }
     </style>
 </head>
@@ -81,7 +87,11 @@
         <button class="btn btn-pay" onclick="showAlipayQR()">支付宝支付</button>
     </div>
     
-    <button class="btn btn-claim" onclick="showQQGroup()">领取</button>
+    <div class="action-buttons">
+        <button class="btn btn-action" onclick="showQQGroup()">领取</button>
+        <button class="btn btn-action" onclick="solveJMProblem()">解决JM问题</button>
+    </div>
+    
     <div id="qq-group" class="qq-group">
         QQ群号：618638217
     </div>
@@ -100,6 +110,10 @@
         function showQQGroup() {
             document.getElementById('qq-group').style.display = 'block';
             alert('请加QQ群：618638217');
+        }
+
+        function solveJMProblem() {
+            window.location.href = "https://virtuous-coconut-1g7f5z.mysxl.cn/";
         }
     </script>
 </body>
