--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
     </div>
 
     <div id="custom-text" class="info-box custom-text">
-        <!-- 您可以在此处填写自定义文本内容 -->
-        这里是其他资源内容（请自行修改）
+        动漫软件和网址：AcFun（成人版） iwara（i站） 哔咔 pixiv 漫漫撸 漫漫蛙 e站（ehviewer） Hanime（H站，网址） javDB 二游总站 萌站 原神总站 崩铁总站
+真人视频：x站 香蕉视频 草莓视频 91真人 推特成人版 prohub 爱情岛 度娘成人版
+游戏：游咔
+外网软件都有
         <br>
         <br>
         <p>示例内容1：XXXX资源获取方式</p>
