--- a/index.html
+++ b/index.html
@@ -127,14 +127,13 @@
     </div>
 
     <div id="custom-text" class="info-box custom-text">
-        动漫软件和网址：AcFun（成人版） iwara（i站） 哔咔 pixiv 漫漫撸 漫漫蛙 e站（ehviewer） Hanime（H站，网址） javDB 二游总站 萌站 原神总站 崩铁总站
-真人视频：x站 香蕉视频 草莓视频 91真人 推特成人版 prohub 爱情岛 度娘成人版
-游戏：游咔
-外网软件都有
+        
         <br>
         <br>
-        <p>示例内容1：XXXX资源获取方式</p>
-        <p>示例内容2：YYYY使用教程</p>
+        <p>动漫软件和网址：AcFun（成人版） iwara（i站） 哔咔 pixiv 漫漫撸 漫漫蛙 e站（ehviewer） Hanime（H站，网址） javDB 二游总站 萌站 原神总站 崩铁总站</p>
+        <p>真人视频：x站 香蕉视频 草莓视频 91真人 推特成人版 prohub 爱情岛 度娘成人版</p>
+        <p>游戏：游咔</p>
+        <p>外网软件都有</p>
     </div>
 
     <script>
