--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@
         挂梯子解决JM更新问题，我有两种梯子，一种每天免费一小时的9块，一种永久破解版的无限时长15块，私信快手主播拿进梯子的群号
     </div>
 
-    <div id="custom-text" class="info-box custom-text">
-    
+    <div id="custom-text" class="info-box custom-text">  
+        <br>动漫软件，真人视频和外网软件都是一个7块，两个10块。
         <p>动漫软件和网址：AcFun（成人版） iwara（i站） 哔咔 pixiv 漫漫撸 漫漫蛙 e站（ehviewer） Hanime（H站，网址） javDB 二游总站 萌站 原神总站 崩铁总站</p>
         <p>真人视频：x站 香蕉视频 草莓视频 91真人 推特成人版 prohub 爱情岛 度娘成人版</p>
         <p>游戏：游咔</p>
         <p>外网软件都有</p>
+        <br>翻墙的加速器（梯子）,每天免费一小时的梯子9块，永久破解版的无限时长的梯子15块
     </div>
 
     <script>
