--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div id="alipay-qr" class="qr-code">
             <h3>支付宝支付二维码</h3>
-            <img src="alipay-qr.jpg" alt="支付宝付款码" style="width: 200px;">
+            <img src="https://sfile.chatglm.cn/chatglm4/0f59804b-bc68-4b5c-b4a8-7fd826666f45.jpg?image_process=format,webp&time=0" alt="支付宝付款码" style="width: 200px;">
             <div class="instructions">
                 <p>⚠️ 请使用支付宝扫一扫完成支付</p>
                 <p>⚠️ 付款备注栏填写您的快手账号</p>
