--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
             <div class="payment-methods">
                 <div class="payment-btn" onclick="selectPayment('wechat')">
-                    <img src="wechat-icon.png" alt="微信支付">
+                    <img src="https://sfile.chatglm.cn/chatglm4/434a7c15-1c06-4475-9c50-259b15715fb4.jpg?image_process=format,webp&time=0" alt="微信支付">
                     <div>微信支付</div>
                 </div>
                 <div class="payment-btn" onclick="selectPayment('alipay')">
-                    <img src="alipay-icon.png" alt="支付宝支付">
+                    
                     <div>支付宝支付</div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
 
         <div id="wechat-qr" class="qr-code">
             <h3>微信支付二维码</h3>
-            <img src="wechat-qr.jpg" alt="微信付款码" style="width: 200px;">
+            <img src="https://sfile.chatglm.cn/chatglm4/434a7c15-1c06-4475-9c50-259b15715fb4.jpg?image_process=format,webp&time=0" alt="微信付款码" style="width: 200px;">
             <div class="instructions">
                 <p>⚠️ 请长按保存二维码到微信扫码支付</p>
                 <p>⚠️ 付款时务必备注您的快手账号</p>
